--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pytest
-        pip insatll cython
+        pip install cython
         pip install numpy
     - name: Install package
       run: |
