--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         pip install numpy
     - name: Install package
       run: |
-        pip install -e .
+        python setup.py install
     - name: Test with pytest
       run: |
         pip install pytest
