--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,9 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
-        pip install pytest
-        pip install cython
-        pip install numpy
+        pip install pytest, cython, numpy, matplotlib
     - name: Install package
       run: |
         python setup.py install
