--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,3 @@
 [build-system]
-requires = ["cython", "numpy"]
+requires = ["setuptools >= 40.6.0", "wheel", "cython", "numpy"]
+build-backend = "setuptools.build_meta"
